# tg-notify-bot

./: .env.template  .gitignore  Dockerfile  README.md  app.py  config.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_02_08_1543-f557918c9f6b_create_tables.py  2025_03_28_1248-4e915032426b_add_button_url_attribute_to_the_.py  2025_04_11_1313-38cf8e408509_add_intermediate_table.py
api/: __init__.py
api/api_v1/crud/: __init__.py  notification.py
api/api_v1/models/: __init__.py  document.py  notification.py
api/api_v1/routers/: __init__.py  notification.py
api/api_v1/services/: __init__.py  generate_token.py
database/: __init__.py  session.py
database/models/: __init__.py  _base.py  document.py  notification.py  notification_document.py
tests/: conftest.py  document.txt
tests/fixtures/: __init__.py  client.py  data.py  database.py
tests/integration/: test_notification.py
tg_bot/: bot.py
tg_bot/messaging/: __init__.py  send_files.py  send_message.py
tg_bot/services/: __init__.py  send_message.py
tg_bot/utils/: __init__.py  media.py
