[project]
name = "tg-notify-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "sonic_72_kon",email = "kko160305@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "aiogram (>=3.17.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
