[project]
name = "tg-notify-bot"
version = "1.2.1"
description = "Telegram bot for sending generated notifications via HTTP using an API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.115.11",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "orjson>=3.10.15",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "sqlalchemy[asyncio]>=2.0.39",
    "uvicorn[standard]>=0.34.0",
]
